# pdf-master

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT-REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TEST_REPORT.md  _create_conftest.py  _run_create.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.json  tox.ini
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
agents/: pdf-ai.md  pdf-analyzer.md  pdf-batch.md  pdf-compare.md  pdf-compress.md  pdf-converter.md  pdf-explorer.md  pdf-extract.md  pdf-form.md  pdf-merge-split.md  pdf-metadata.md  pdf-ocr.md  pdf-repair.md  pdf-security.md  pdf-watermark.md
config/: config.yaml.example  providers.yaml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  EXAMPLES.md  TROUBLESHOOTING.md
docs-site/: index.html
docs-site/css/: style.css
docs-site/js/: main.js
docs/superpowers/plans/: 2026-04-13-pdf-master-implementation.md
docs/superpowers/specs/: 2026-04-13-pdf-master-design.md
examples/: ai_workflow.sh  basic_usage.sh  batch_processing.sh  sample_config.yaml
hooks/: hooks.json
output-styles/: pdf-report.md  pdf-summary.md
scripts/: run_tests.py
skills/pdf/: SKILL.md  ai.md  forms.md  latex.md  ocr.md  reference.md  security.md
skills/pdf/docs/: SECURITY_AUDIT.md
skills/pdf/scripts/: __init__.py  _gen.py  _utils.py  ai_provider.py  annotations.py  batch_process.py  bookmarks.py  check_fillable_fields.py  convert_pdf_to_images.py  decrypt_pdf.py  encrypt_pdf.py  extract_form_field_info.py  extract_images.py  extract_metadata.py  extract_tables.py  extract_text.py  fill_fillable_fields.py  form_utils.py  links.py  merge_pdfs.py  ocr_pdf.py  pdf_compare.py  pdf_compress.py  pdf_config.py  pdf_info.py  pdf_repair.py  pdf_to_excel.py  pdf_to_markdown.py  pdf_to_word.py  pdf_utils.py  pdf_validate.py  pdfa_convert.py  provider_manager.py  qa_pdf.py  redact_pdf.py  rename_pdf.py  rotate_pdf.py  security_audit.py  sign_pdf.py  split_pdf.py  (+4 more)
tests/: __init__.py  conftest.py  test_ai_provider.py  test_annotations.py  test_batch_process.py  test_bookmarks.py  test_encrypt_decrypt.py  test_extract_images.py  test_extract_metadata.py  test_extract_tables.py  test_extract_text.py  test_form_fields.py  test_links.py  test_merge_pdfs.py  test_ocr_pdf.py  test_pdf_info.py  test_pdf_validate.py  test_pdfa_convert.py  test_provider_manager.py  test_rename_pdf.py  test_rotate_pdf.py  test_security_audit.py  test_sign_pdf.py  test_split_pdf.py  test_watermark_pdf.py
