# ===========================================
# PDF-Master - Project Configuration
# ===========================================

[project]
name = "pdf-master"
version = "1.0.0"
description = "全能型 PDF 处理 Claude Code 插件"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "zshyc", email = "17669757689@163.com"}
]
keywords = ["pdf", "claude", "ai", "ocr", "latex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pypdf>=3.0.0",
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "PyYAML>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]
ocr-paddle = [
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/zshyc/pdf-master"
Documentation = "https://github.com/zshyc/pdf-master#readme"
Repository = "https://github.com/zshyc/pdf-master"
Issues = "https://github.com/zshyc/pdf-master/issues"

# -------------------------------------------
# Tool Configurations
# -------------------------------------------

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# -------------------------------------------
# Build System
# -------------------------------------------

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["skills"]
include = ["pdf*"]
